--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,4 @@ Helper classes with ability to override anything that comes before it
 */
 
 {% include './utilities/_helper.css' %}
+{% include './theme-overrides.css' %}
