--- a/css/elements/_typography.css
+++ b/css/elements/_typography.css
@@ -36,37 +36,58 @@ h6 {
   margin: 0 0 1.4rem;
 }
 
-h1,
-h2 {
-  font-weight: var(--font-weight-bold);
-}
-
 h1 {
+  color: var(--h1-color);
   font-size: var(--h1-font-size);
+  font-weight: var(--h1-font-weight);
   line-height: var(--h1-line-height);
+  letter-spacing: var(--h1-letter-spacing);
+  text-transform: var(--h1-text-transform);
 }
 
 h2 {
+  color: var(--h2-color);
   font-size: var(--h2-font-size);
+  font-weight: var(--h2-font-weight);
   line-height: var(--h2-line-height);
+  letter-spacing: var(--h2-letter-spacing);
+  text-transform: var(--h2-text-transform);
 }
 
 h3 {
+  color: var(--h3-color);
   font-size: var(--h3-font-size);
+  font-weight: var(--h3-font-weight);
   line-height: var(--h3-line-height);
-  font-weight: var(--font-weight-normal);
+  letter-spacing: var(--h3-letter-spacing);
+  text-transform: var(--h3-text-transform);
 }
 
 h4 {
+  color: var(--h4-color);
   font-size: var(--h4-font-size);
+  font-weight: var(--h4-font-weight);
   line-height: var(--h4-line-height);
+  letter-spacing: var(--h4-letter-spacing);
+  text-transform: var(--h4-text-transform);
 }
 
 h5 {
+  color: var(--h5-color);
   font-size: var(--h5-font-size);
+  font-weight: var(--h5-font-weight);
   line-height: var(--h5-line-height);
-  letter-spacing: 4.2px;
-  text-transform: uppercase;
+  letter-spacing: var(--h5-letter-spacing);
+  text-transform: var(--h5-text-transform);
+}
+
+h6 {
+  color: var(--h6-color);
+  font-size: var(--h6-font-size);
+  font-weight: var(--h6-font-weight);
+  line-height: var(--h6-line-height);
+  letter-spacing: var(--h6-letter-spacing);
+  text-transform: var(--h6-text-transform);
 }
 
 /* Lists */
