--- a/css/theme-overrides.css
+++ b/css/theme-overrides.css
@@ -37,6 +37,10 @@
 
 {% set primary_color = theme.global_colors.primary.color  %}
 {% set secondary_color = theme.global_colors.secondary.color %}
+{% set tertiery_color = theme.global_colors.tertiery.color %}
+{% set quaternary_color = theme.global_colors.quaternary.color %}
+{% set quinary_color = theme.global_colors.quinary.color %}
+{% set senary_color = theme.global_colors.senary.color %}
 
 /* 1c. Typography */
 
@@ -116,6 +120,58 @@
 {% set footer_bg_color = color(theme.footer.background.color) %}
 {% set footer_font_color = theme.footer.text.color.color %}
 
+  /* TODO: Wire up 'line-height' and 'letter-spacing' fields */
+body {
+  /* Colors */
+  --theme-primary: {{primary_color}};
+  --theme-secondary: {{secondary_color}};
+  --theme-tertiery: {{tertiery_color}};
+  --theme-quaternary: {{quaternary_color}};
+  --theme-quinary: {{quinary_color}};
+  --theme-senary: {{senary_color}};
+
+  /* Body Typography */
+  --body-font: '{{body_font.font}}', sans-serif;
+  --body-font-size: {{body_font.size ~ body_font.size_unit}};
+
+  /* Headings */
+  --h1-color: {{h1_font.color}};
+  --h1-font: '{{h1_font.font}}', sans-serif;
+  --h1-font-size: {{h1_font.size ~ h1_font.size_unit}};
+  --h1-font-weight: {{h1_font.variant}};
+  --h1-text-transform: {{h1_text_transform}};
+
+  --h2-color: {{h2_font.color}};
+  --h2-font: '{{h2_font.font}}', sans-serif;
+  --h2-font-size: {{h2_font.size ~ h2_font.size_unit}};
+  --h2-font-weight: {{h2_font.variant}};
+  --h2-text-transform: {{h2_text_transform}};
+
+  --h3-color: {{h3_font.color}};
+  --h3-font: '{{h3_font.font}}', sans-serif;
+  --h3-font-size: {{h3_font.size ~ h3_font.size_unit}};
+  --h3-font-weight: {{h3_font.variant}};
+  --h3-text-transform: {{h3_text_transform}};
+
+  --h4-color: {{h4_font.color}};
+  --h4-font: '{{h4_font.font}}', sans-serif;
+  --h4-font-size: {{h4_font.size ~ h4_font.size_unit}};
+  --h4-font-weight: {{h4_font.variant}};
+  --h4-text-transform: {{h4_text_transform}};
+
+  --h5-color: {{h5_font.color}};
+  --h5-font: '{{h5_font.font}}', sans-serif;
+  --h5-font-size: {{h5_font.size ~ h5_font.size_unit}};
+  --h5-font-weight: {{h5_font.variant}};
+  --h5-text-transform: {{h5_text_transform}};
+
+  --h6-color: {{h6_font.color}};
+  --h6-font: '{{h6_font.font}}', sans-serif;
+  --h6-font-size: {{h6_font.size ~ h6_font.size_unit}};
+  --h6-font-weight: {{h6_font.variant}};
+  --h6-text-transform: {{h6_text_transform}};
+}
+
 {###########################################################################}
 {##################   2. Containers / Grid / DND areas   ###################}
 {###########################################################################}
@@ -137,15 +193,14 @@
 {###########################   3. Typography   #############################}
 {###########################################################################}
 
-html {
+/* html {
   font-size: {{ body_font.size ~ body_font.size_unit }};
 }
 
 body {
   {{ body_font.style }};
   color: {{ body_font.color }};
-  font-size: {{ body_font.size ~ body_font.size_unit }};
-}
+} */
 
 /* Paragraphs */
 
@@ -173,7 +228,7 @@ a:active {
 
 /* Headings */
 
-h1 {
+/* h1 {
   {{ h1_font.style }};
   color: {{ h1_font.color }};
   font-size: {{ h1_font.size ~ h1_font.size_unit }};
@@ -213,7 +268,7 @@ h6 {
   color: {{ h6_font.color }};
   font-size: {{ h6_font.size ~ h6_font.size_unit }};
   text-transform: {{ h6_text_transform }};
-}
+} */
 
 /* Blockquote */
 
