--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -9,6 +9,7 @@
 .header__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .header__row-1 {
@@ -77,7 +78,7 @@
   align-items: center;
   display: flex;
   height: auto;
-  margin-right: auto;
+  margin-right: 0;
   max-width: 200px;
   overflow: hidden;
 }
