--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -45,14 +45,6 @@
             </div>
           </div>
         {% endif %}
-        <div class="header__search header--element">
-          {% module 'site_search'
-            path='@hubspot/search_input',
-            label='Search',
-            field_label='Search',
-            placeholder=''
-          %}
-        </div>
       </div>
 
       {# Header navigation row two #}
@@ -71,7 +63,11 @@
           %}
         </div>
       </div>
+     
 
+    </div>
+    <div class="header__icons">
+      {% module 'social_icons' path='../../modules/social-icons' %}
     </div>
 
   </div>
