--- a/templates/home.html
+++ b/templates/home.html
@@ -15,13 +15,21 @@
   class='body-container body-container--home'
 %}
 
+
   {# Hero banner #}
 
-  {% include_dnd_partial path='../sections/hero-banner.html' %}
+  {% include_dnd_partial path='../sections/home-hero.html' %}
+    
+  {% include_dnd_partial path='../sections/call-to-action.html' %}
+    
 
   {# Two column image right #}
 
-  {% include_dnd_partial path='../sections/multi-row-content.html' %}
+  {% include_dnd_partial path='../sections/two-column-content.html' %}
+
+  {# Three column image with text #}
+
+  {% include_dnd_partial path='../sections/multi-column-content.html' %}
 
   {# Two column image left #}
 
@@ -52,13 +60,6 @@
     {% end_dnd_module %}
   {% end_dnd_section %}
 
-  {# Call to action #}
-
-  {% include_dnd_partial path='../sections/call-to-action.html' %}
-
-  {# Three column image with text #}
-
-  {% include_dnd_partial path='../sections/multi-column-content.html' %}
 
 {% end_dnd_area %}
 {% endblock body %}
