--- a/css/theme-overrides.css
+++ b/css/theme-overrides.css
@@ -48,30 +48,46 @@
 {% set secondary_font = theme.global_fonts.secondary %}
 
 {% set h1_font = theme.text.h1.font %}
+{% set h1_line_height = theme.text.h1.line_height ~ 'px' %}
+{% set h1_letter_spacing = theme.text.h1.letter_spacing ~ 'px'%}
 {% set h1_text_transform = theme.text.h1.transform %}
 
 {% set h2_font = theme.text.h2.font %}
+{% set h2_line_height = theme.text.h2.line_height ~ 'px' %}
+{% set h2_letter_spacing = theme.text.h2.letter_spacing ~ 'px' %}
 {% set h2_text_transform = theme.text.h2.transform %}
 
 {% set h3_font = theme.text.h3.font %}
+{% set h3_line_height = theme.text.h3.line_height ~ 'px' %}
+{% set h3_letter_spacing = theme.text.h3.letter_spacing ~ 'px' %}
 {% set h3_text_transform = theme.text.h3.transform %}
 
 {% set h4_font = theme.text.h4.font %}
+{% set h4_line_height = theme.text.h4.line_height ~ 'px' %}
+{% set h4_letter_spacing = theme.text.h4.letter_spacing ~ 'px' %}
 {% set h4_text_transform = theme.text.h4.transform %}
 
 {% set h5_font = theme.text.h5.font %}
+{% set h5_line_height = theme.text.h5.line_height ~ 'px' %}
+{% set h5_letter_spacing = theme.text.h5.letter_spacing ~ 'px' %}
 {% set h5_text_transform = theme.text.h5.transform %}
 
 {% set h6_font = theme.text.h6.font %}
+{% set h6_line_height = theme.text.h6.line_height ~ 'px' %}
+{% set h6_letter_spacing = theme.text.h6.letter_spacing ~ 'px' %}
 {% set h6_text_transform = theme.text.h6.transform %}
 
 {% set body_font = theme.text.body_font.font %}
+{% set body_line_height = theme.text.body_font.line_height ~ 'px' %}
+{% set body_letter_spacing = theme.text.body_font.letter_spacing ~ 'px' %}
 
 {% set anchor_font = theme.text.links.font %}
 
 /* 1d. Buttons */
 
 {% set button_font = theme.buttons.text.font %}
+{% set button_line_height = theme.buttons.text.line_height ~ 'px' %}
+{% set button_letter_spacing = theme.buttons.text.letter_spacing ~ 'px' %}
 {% set button_text_transform = theme.buttons.text.transform %}
 {% set button_bg_color = color(theme.buttons.background.color) %}
 {% set button_border = theme.buttons.border.border.css %}
@@ -133,43 +149,60 @@ body {
   /* Body Typography */
   --body-font: '{{body_font.font}}', sans-serif;
   --body-font-size: {{body_font.size ~ body_font.size_unit}};
+  --body-line-height: {{body_line_height}};
+  --body-letter-spacing: {{body_letter_spacing}};
 
   /* Headings */
   --h1-color: {{h1_font.color}};
   --h1-font: '{{h1_font.font}}', sans-serif;
   --h1-font-size: {{h1_font.size ~ h1_font.size_unit}};
   --h1-font-weight: {{h1_font.variant}};
+  --h1-line-height: {{h1_line_height}};
+  --h1-letter-spacing: {{h1_letter_spacing}};
   --h1-text-transform: {{h1_text_transform}};
 
   --h2-color: {{h2_font.color}};
   --h2-font: '{{h2_font.font}}', sans-serif;
   --h2-font-size: {{h2_font.size ~ h2_font.size_unit}};
   --h2-font-weight: {{h2_font.variant}};
+  --h2-line-height: {{h2_line_height}};
+  --h2-letter-spacing: {{h2_letter_spacing}};
   --h2-text-transform: {{h2_text_transform}};
 
   --h3-color: {{h3_font.color}};
   --h3-font: '{{h3_font.font}}', sans-serif;
   --h3-font-size: {{h3_font.size ~ h3_font.size_unit}};
   --h3-font-weight: {{h3_font.variant}};
+  --h3-line-height: {{h3_line_height}};
+  --h3-letter-spacing: {{h3_letter_spacing}};
   --h3-text-transform: {{h3_text_transform}};
 
   --h4-color: {{h4_font.color}};
   --h4-font: '{{h4_font.font}}', sans-serif;
   --h4-font-size: {{h4_font.size ~ h4_font.size_unit}};
   --h4-font-weight: {{h4_font.variant}};
+  --h4-line-height: {{h4_line_height}};
+  --h4-letter-spacing: {{h4_letter_spacing}};
   --h4-text-transform: {{h4_text_transform}};
 
   --h5-color: {{h5_font.color}};
   --h5-font: '{{h5_font.font}}', sans-serif;
   --h5-font-size: {{h5_font.size ~ h5_font.size_unit}};
   --h5-font-weight: {{h5_font.variant}};
+  --h5-line-height: {{h5_line_height}};
+  --h5-letter-spacing: {{h5_letter_spacing}};
   --h5-text-transform: {{h5_text_transform}};
 
   --h6-color: {{h6_font.color}};
   --h6-font: '{{h6_font.font}}', sans-serif;
   --h6-font-size: {{h6_font.size ~ h6_font.size_unit}};
   --h6-font-weight: {{h6_font.variant}};
+  --h6-line-height: {{h6_line_height}};
+  --h6-letter-spacing: {{h6_letter_spacing}};
   --h6-text-transform: {{h6_text_transform}};
+
+  --button-font-size: {{button_font.size ~ button_font.size_unit}};
+  --button-font-weight: {{button_font.variant}};
 }
 
 {###########################################################################}
