--- a/css/elements/_buttons.css
+++ b/css/elements/_buttons.css
@@ -5,13 +5,36 @@ button,
   text-align: center;
   transition: all 0.15s linear;
   white-space: normal;
+  font-size: var(--button-font-size);
+  font-weight: var(--button-font-weight);
+  line-height: var(--button-line-height);
+  letter-spacing: var(--button-letter-spacing);
+  border-radius: var(--button-border-radius);
+
+  /* Border Width */
+  border-top-width: var(--border-top-width);
+  border-bottom-width: var(--border-bottom-width);
+  border-right-width: var(--border-right-width);
+  border-left-width: var(--border-left-width);
+
+  /* Border Style */
+  border-top-style: var(--border-top-style);
+  border-bottom-style: var(--border-bottom-style);
+  border-right-style: var(--border-right-style);
+  border-left-style: var(--border-left-style);
+
+  /* Border Color */
+  border-top-color: var(--border-top-color);
+  border-bottom-color: var(--border-bottom-colo);
+  border-right-color: var(--border-right-color);
+  border-left-color: var(--border-left-color);
 }
 
 button:disabled,
 .button:disabled {
-  background-color: #D0D0D0;
-  border-color: #D0D0D0;
-  color: #E6E6E6;
+  background-color: #d0d0d0;
+  border-color: #d0d0d0;
+  color: #e6e6e6;
 }
 
 /* No button */
