--- a/css/elements/_typography.css
+++ b/css/elements/_typography.css
@@ -37,6 +37,7 @@ h6 {
 }
 
 h1 {
+  font-family: var(--h1-font);
   color: var(--h1-color);
   font-size: var(--h1-font-size);
   font-weight: var(--h1-font-weight);
@@ -46,6 +47,7 @@ h1 {
 }
 
 h2 {
+  font-family: var(--h2-font);
   color: var(--h2-color);
   font-size: var(--h2-font-size);
   font-weight: var(--h2-font-weight);
@@ -55,6 +57,7 @@ h2 {
 }
 
 h3 {
+  font-family: var(--h3-font);
   color: var(--h3-color);
   font-size: var(--h3-font-size);
   font-weight: var(--h3-font-weight);
@@ -64,6 +67,7 @@ h3 {
 }
 
 h4 {
+  font-family: var(--h4-font);
   color: var(--h4-color);
   font-size: var(--h4-font-size);
   font-weight: var(--h4-font-weight);
@@ -73,6 +77,7 @@ h4 {
 }
 
 h5 {
+  font-family: var(--h5-font);
   color: var(--h5-color);
   font-size: var(--h5-font-size);
   font-weight: var(--h5-font-weight);
@@ -82,6 +87,7 @@ h5 {
 }
 
 h6 {
+  font-family: var(--h6-font);
   color: var(--h6-color);
   font-size: var(--h6-font-size);
   font-weight: var(--h6-font-weight);
