--- a/css/elements/_header.css
+++ b/css/elements/_header.css
@@ -6,8 +6,7 @@
 .menu__link,
 .header__logo .logo-company-name,
 .header__language-switcher-label-current,
-.header__language-switcher .lang_list_class li a
- {
+.header__language-switcher .lang_list_class li a {
     color: var(--header-nav-link-color);
     font-family: var(--header-nav-link-font);
     font-size: var(--header-nav-link-font-size);
