--- a/css/generic/_variables.css
+++ b/css/generic/_variables.css
@@ -126,6 +126,7 @@
   --header-nav-link-font-weight: 700;
   --header-nav-link-line-height: 14px;
   --header-nav-link-letter-spacing: 0px;
+  --header-nav-link-text-transform: none;
 
   --header-sub-nav-background: #f5f5f5;
   --header-sub-nav-link-color: var(--theme-primary);
@@ -149,5 +150,4 @@
   --footer-nav-link-font-weight: 700;
   --footer-nav-link-line-height: 14px;
   --footer-nav-link-letter-spacing: 0px;
-
 }
