--- a/modules/menu.module/module.css
+++ b/modules/menu.module/module.css
@@ -25,9 +25,9 @@
 }
 
 .menu__link {
-  font-size: 0.917rem;
-  line-height: 1.667rem;
-  text-decoration: none;
+  /* font-size: 0.917rem; */
+  /* line-height: 1.667rem; */
+  /* text-decoration: none; */
 }
 
 .menu__link:hover,
@@ -38,12 +38,12 @@
 
 .menu__link--active-link,
 .menu__link--active-branch {
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 @media (min-width: 768px) and (max-width: 1150px) {
   .menu__link {
-    font-size: 0.833rem;
+    /* font-size: 0.833rem; */
   }
 }
 
@@ -55,7 +55,7 @@
 
   .menu__link {
     display: block;
-    font-size: 1.083rem;
+    /* font-size: 1.083rem; */
   }
 }
 
@@ -78,7 +78,7 @@
 
 @media (max-width: 767px) {
   .menu__item--depth-1 {
-    border-top: 2px solid #CED4DB;
+    border-top: 2px solid #ced4db;
     padding: 0;
   }
 
@@ -121,7 +121,7 @@
 }
 
 .menu__submenu .menu__item {
-  border-bottom: 1px solid #D1D6DC;
+  border-bottom: 1px solid #d1d6dc;
   padding: 0;
   width: 100%;
 }
@@ -140,7 +140,7 @@
 
 /* Flyouts for the last two top level menu items go left to keep page responsive */
 
-.menu__item--depth-1:nth-last-child(-n+2) .menu__submenu--level-3 {
+.menu__item--depth-1:nth-last-child(-n + 2) .menu__submenu--level-3 {
   left: auto;
   right: 100%;
   top: 0;
@@ -167,7 +167,7 @@
     position: absolute;
     top: -12px;
     transform: rotate(45deg);
-    transition: background-color .3s;
+    transition: background-color 0.3s;
     width: 30px;
     z-index: 2;
   }
@@ -195,9 +195,9 @@
   }
 
   .menu__submenu .menu__item {
-    background-color: #FFF;
+    background-color: #fff;
     border-bottom: none;
-    border-top: 2px solid #EBEFF3;
+    border-top: 2px solid #ebeff3;
     padding: 0;
   }
 
@@ -225,7 +225,7 @@
 
 /* Menu icons */
 
-@media(min-width: 768px) {
+@media (min-width: 768px) {
   .menu__submenu .menu__child-toggle {
     margin-left: auto;
     padding: 0 1.05rem;
@@ -288,4 +288,3 @@
     transition: transform 0.4s;
   }
 }
-
