--- a/modules/menu.module/module.css
+++ b/modules/menu.module/module.css
@@ -68,12 +68,12 @@
 }
 
 .menu__item--depth-1 > .menu__link--active-link:after {
-  bottom: -3px;
+  /* bottom: -3px;
   content: '';
   height: 2px;
   left: 0;
   position: absolute;
-  width: 100%;
+  width: 100%; */
 }
 
 @media (max-width: 767px) {
@@ -94,8 +94,8 @@
 /* Menu items - submenus */
 
 .menu__submenu {
-  box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
+  background: var(--header-sub-nav-background);
+  border-radius: 0;
   display: none;
   left: 0;
   position: absolute;
@@ -156,7 +156,7 @@
 
 @media (min-width: 768px) {
   .menu__submenu--level-2 > .menu__item:first-child:before {
-    border-radius: 6px;
+    /* border-radius: 6px;
     box-shadow: 0 2px 9px 0 rgb(0 0 0 / 20%);
     content: '';
     display: block;
@@ -169,7 +169,7 @@
     transform: rotate(45deg);
     transition: background-color 0.3s;
     width: 30px;
-    z-index: 2;
+    z-index: 2; */
   }
 
   /* Keeps triangle to the left for the first menu item's drop down menu */
