--- a/modules/action-center.module/module.css
+++ b/modules/action-center.module/module.css
@@ -1,6 +1,5 @@
 .button-row {
   padding: 20px 40px;
-  width:80%;
   margin: 0 auto; 
 }
 
@@ -20,9 +19,13 @@
   break-after: always; /* New syntax */
 }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 768px) {
   .button-row {
     display: block;
     padding: 20px;
   }
+  .button-column {
+    width: 100%;
+  }
+
 }
