--- a/modules/overlapping-split-grid.module/module.css
+++ b/modules/overlapping-split-grid.module/module.css
@@ -23,7 +23,7 @@
   width: 50%;
 }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 768px) {
   .split-grid {
     display: block;
   }
@@ -32,6 +32,7 @@
     width: 100%;
   }
   .split-left-content {
+    position: relative;
     top: 0;
   }
 }
