--- a/modules/partner-logos.module/module.css
+++ b/modules/partner-logos.module/module.css
@@ -1,9 +1,16 @@
 .logos {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 .logo {
   float: left;
   width: 20%;
   padding: 50px 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .logo {
+    clear: both;
+    width: 100%;
+  }
 }
