--- a/modules/three-column-grid.module/module.css
+++ b/modules/three-column-grid.module/module.css
@@ -1,6 +1,7 @@
 .column {
   float: left;
   width: 33.33%;
+  padding: 30px 10px;  
 }
 
 .row:after {
@@ -13,7 +14,7 @@ h4 {
   margin-bottom: 0;
 }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 768px) {
   .column {
     width: 100%;
   }
