--- a/css/objects/_layout.css
+++ b/css/objects/_layout.css
@@ -1,410 +1,413 @@
 /* Responsive grid */
 
 .row-fluid {
-  width: 100%;
+    width: 100%;
 }
 
 .row-fluid:before,
 .row-fluid:after {
-  display: table;
-  content: '';
+    display: table;
+    content: '';
 }
 
 .row-fluid:after {
-  clear: both;
+    clear: both;
 }
 
 .row-fluid [class*='span'] {
-  display: block;
-  float: left;
-  width: 100%;
-  min-height: 1px;
-  margin-left: 2.127659574%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
+    display: block;
+    float: left;
+    width: 100%;
+    min-height: 1px;
+    margin-left: 2.127659574%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .row-fluid [class*='span']:first-child {
-  margin-left: 0;
+    margin-left: 0;
 }
 
 .row-fluid .span12 {
-  width: 99.99999998999999%;
+    width: 99.99999998999999%;
 }
 
 .row-fluid .span11 {
-  width: 91.489361693%;
+    width: 91.489361693%;
 }
 
 .row-fluid .span10 {
-  width: 82.97872339599999%;
+    width: 82.97872339599999%;
 }
 
 .row-fluid .span9 {
-  width: 74.468085099%;
+    width: 74.468085099%;
 }
 
 .row-fluid .span8 {
-  width: 65.95744680199999%;
+    width: 65.95744680199999%;
 }
 
 .row-fluid .span7 {
-  width: 57.446808505%;
+    width: 57.446808505%;
 }
 
 .row-fluid .span6 {
-  width: 48.93617020799999%;
+    width: 48.93617020799999%;
 }
 
 .row-fluid .span5 {
-  width: 40.425531911%;
+    width: 40.425531911%;
 }
 
 .row-fluid .span4 {
-  width: 31.914893614%;
+    width: 31.914893614%;
 }
 
 .row-fluid .span3 {
-  width: 23.404255317%;
+    width: 23.404255317%;
 }
 
 .row-fluid .span2 {
-  width: 14.89361702%;
+    width: 14.89361702%;
 }
 
 .row-fluid .span1 {
-  width: 6.382978723%;
+    width: 6.382978723%;
 }
 
 .container-fluid:before,
 .container-fluid:after {
-  display: table;
-  content: '';
+    display: table;
+    content: '';
 }
 
 .container-fluid:after {
-  clear: both;
+    clear: both;
 }
 
 @media (max-width: 767px) {
-  .row-fluid {
-    width: 100%;
-  }
+    .row-fluid {
+        width: 100%;
+    }
 
-  .row-fluid [class*='span'] {
-    display: block;
-    float: none;
-    width: auto;
-    margin-left: 0;
-  }
+    .row-fluid [class*='span'] {
+        display: block;
+        float: none;
+        width: auto;
+        margin-left: 0;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1139px) {
-  .row-fluid {
-    width: 100%;
-  }
+    .row-fluid {
+        width: 100%;
+    }
 
-  .row-fluid:before,
-  .row-fluid:after {
-    display: table;
-    content: '';
-  }
+    .row-fluid:before,
+    .row-fluid:after {
+        display: table;
+        content: '';
+    }
 
-  .row-fluid:after {
-    clear: both;
-  }
+    .row-fluid:after {
+        clear: both;
+    }
 
-  .row-fluid [class*='span'] {
-    display: block;
-    float: left;
-    width: 100%;
-    min-height: 1px;
-    margin-left: 2.762430939%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-  }
+    .row-fluid [class*='span'] {
+        display: block;
+        float: left;
+        width: 100%;
+        min-height: 1px;
+        margin-left: 2.762430939%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        box-sizing: border-box;
+    }
 
-  .row-fluid [class*='span']:first-child {
-    margin-left: 0;
-  }
+    .row-fluid [class*='span']:first-child {
+        margin-left: 0;
+    }
 
-  .row-fluid .span12 {
-    width: 99.999999993%;
-  }
+    .row-fluid .span12 {
+        width: 99.999999993%;
+    }
 
-  .row-fluid .span11 {
-    width: 91.436464082%;
-  }
+    .row-fluid .span11 {
+        width: 91.436464082%;
+    }
 
-  .row-fluid .span10 {
-    width: 82.87292817100001%;
-  }
+    .row-fluid .span10 {
+        width: 82.87292817100001%;
+    }
 
-  .row-fluid .span9 {
-    width: 74.30939226%;
-  }
+    .row-fluid .span9 {
+        width: 74.30939226%;
+    }
 
-  .row-fluid .span8 {
-    width: 65.74585634900001%;
-  }
+    .row-fluid .span8 {
+        width: 65.74585634900001%;
+    }
 
-  .row-fluid .span7 {
-    width: 57.182320438000005%;
-  }
+    .row-fluid .span7 {
+        width: 57.182320438000005%;
+    }
 
-  .row-fluid .span6 {
-    width: 48.618784527%;
-  }
+    .row-fluid .span6 {
+        width: 48.618784527%;
+    }
 
-  .row-fluid .span5 {
-    width: 40.055248616%;
-  }
+    .row-fluid .span5 {
+        width: 40.055248616%;
+    }
 
-  .row-fluid .span4 {
-    width: 31.491712705%;
-  }
+    .row-fluid .span4 {
+        width: 31.491712705%;
+    }
 
-  .row-fluid .span3 {
-    width: 22.928176794%;
-  }
+    .row-fluid .span3 {
+        width: 22.928176794%;
+    }
 
-  .row-fluid .span2 {
-    width: 14.364640883%;
-  }
+    .row-fluid .span2 {
+        width: 14.364640883%;
+    }
 
-  .row-fluid .span1 {
-    width: 5.801104972%;
-  }
+    .row-fluid .span1 {
+        width: 5.801104972%;
+    }
 }
 
 @media (min-width: 1280px) {
-  .row-fluid {
-    width: 100%;
-  }
+    .row-fluid {
+        width: 100%;
+    }
 
-  .row-fluid:before,
-  .row-fluid:after {
-    display: table;
-    content: '';
-  }
+    .row-fluid:before,
+    .row-fluid:after {
+        display: table;
+        content: '';
+    }
 
-  .row-fluid:after {
-    clear: both;
-  }
+    .row-fluid:after {
+        clear: both;
+    }
 
-  .row-fluid [class*='span'] {
-    display: block;
-    float: left;
-    width: 100%;
-    min-height: 1px;
-    margin-left: 2.564102564%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-  }
+    .row-fluid [class*='span'] {
+        display: block;
+        float: left;
+        width: 100%;
+        min-height: 1px;
+        margin-left: 2.564102564%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        box-sizing: border-box;
+    }
 
-  .row-fluid [class*='span']:first-child {
-    margin-left: 0;
-  }
+    .row-fluid [class*='span']:first-child {
+        margin-left: 0;
+    }
 
-  .row-fluid .span12 {
-    width: 100%;
-  }
+    .row-fluid .span12 {
+        width: 100%;
+    }
 
-  .row-fluid .span11 {
-    width: 91.45299145300001%;
-  }
+    .row-fluid .span11 {
+        width: 91.45299145300001%;
+    }
 
-  .row-fluid .span10 {
-    width: 82.905982906%;
-  }
+    .row-fluid .span10 {
+        width: 82.905982906%;
+    }
 
-  .row-fluid .span9 {
-    width: 74.358974359%;
-  }
+    .row-fluid .span9 {
+        width: 74.358974359%;
+    }
 
-  .row-fluid .span8 {
-    width: 65.81196581200001%;
-  }
+    .row-fluid .span8 {
+        width: 65.81196581200001%;
+    }
 
-  .row-fluid .span7 {
-    width: 57.264957265%;
-  }
+    .row-fluid .span7 {
+        width: 57.264957265%;
+    }
 
-  .row-fluid .span6 {
-    width: 48.717948718%;
-  }
+    .row-fluid .span6 {
+        width: 48.717948718%;
+    }
 
-  .row-fluid .span5 {
-    width: 40.170940171000005%;
-  }
+    .row-fluid .span5 {
+        width: 40.170940171000005%;
+    }
 
-  .row-fluid .span4 {
-    width: 31.623931624%;
-  }
+    .row-fluid .span4 {
+        width: 31.623931624%;
+    }
 
-  .row-fluid .span3 {
-    width: 23.076923077%;
-  }
+    .row-fluid .span3 {
+        width: 23.076923077%;
+    }
 
-  .row-fluid .span2 {
-    width: 14.529914530000001%;
-  }
+    .row-fluid .span2 {
+        width: 14.529914530000001%;
+    }
 
-  .row-fluid .span1 {
-    width: 5.982905983%;
-  }
+    .row-fluid .span1 {
+        width: 5.982905983%;
+    }
 }
 
 /* Clearfix */
 
 .clearfix:before,
 .clearfix:after {
-  display: table;
-  content: '';
+    display: table;
+    content: '';
 }
 
 .clearfix:after {
-  clear: both;
+    clear: both;
 }
 
 /* Visibilty classes */
 
 .hide {
-  display: none;
+    display: none;
 }
 
 .show {
-  display: block;
+    display: block;
 }
 
 .invisible {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 .hidden {
-  display: none;
-  visibility: hidden;
+    display: none;
+    visibility: hidden;
 }
 
 /* Responsive visibilty classes */
 
 .visible-phone {
-  display: none !important;
+    display: none !important;
 }
 
 .visible-tablet {
-  display: none !important;
+    display: none !important;
 }
 
 .hidden-desktop {
-  display: none !important;
+    display: none !important;
 }
 
 @media (max-width: 767px) {
-  .visible-phone {
-    display: inherit !important;
-  }
+    .visible-phone {
+        display: inherit !important;
+    }
 
-  .hidden-phone {
-    display: none !important;
-  }
+    .hidden-phone {
+        display: none !important;
+    }
 
-  .hidden-desktop {
-    display: inherit !important;
-  }
+    .hidden-desktop {
+        display: inherit !important;
+    }
 
-  .visible-desktop {
-    display: none !important;
-  }
+    .visible-desktop {
+        display: none !important;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1139px) {
-  .visible-tablet {
-    display: inherit !important;
-  }
+    .visible-tablet {
+        display: inherit !important;
+    }
 
-  .hidden-tablet {
-    display: none !important;
-  }
+    .hidden-tablet {
+        display: none !important;
+    }
 
-  .hidden-desktop {
-    display: inherit !important;
-  }
+    .hidden-desktop {
+        display: inherit !important;
+    }
 
-  .visible-desktop {
-    display: none !important;
-  }
+    .visible-desktop {
+        display: none !important;
+    }
 }
 
 /* // Transition row class to use CSS Grid */
 
 .row-fluid {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-gap: var(--grid-gap);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: var(--grid-gap);
 }
 
 .row-fluid:before,
 .row-fluid:after {
-  display: none;
+    display: none;
 }
 
 .row-fluid [class*='span'] {
-  float: none;
-  width: 100%;
-  margin-left: 0;
+    float: none;
+    grid-column: span 12;
+    width: 100%;
+    margin-left: 0;
 }
 
-.row-fluid .span12 {
-  grid-column: span 12;
-}
+@media (min-width: 768px) {
+    .row-fluid .span12 {
+        grid-column: span 12;
+    }
 
-.row-fluid .span11 {
-  grid-column: span 11;
-}
+    .row-fluid .span11 {
+        grid-column: span 11;
+    }
 
-.row-fluid .span10 {
-  grid-column: span 10;
-}
+    .row-fluid .span10 {
+        grid-column: span 10;
+    }
 
-.row-fluid .span9 {
-  grid-column: span 9;
-}
+    .row-fluid .span9 {
+        grid-column: span 9;
+    }
 
-.row-fluid .span8 {
-  grid-column: span 8;
-}
+    .row-fluid .span8 {
+        grid-column: span 8;
+    }
 
-.row-fluid .span7 {
-  grid-column: span 7;
-}
+    .row-fluid .span7 {
+        grid-column: span 7;
+    }
 
-.row-fluid .span6 {
-  grid-column: span 6;
-}
+    .row-fluid .span6 {
+        grid-column: span 6;
+    }
 
-.row-fluid .span5 {
-  grid-column: span 5;
-}
+    .row-fluid .span5 {
+        grid-column: span 5;
+    }
 
-.row-fluid .span4 {
-  grid-column: span 4;
-}
+    .row-fluid .span4 {
+        grid-column: span 4;
+    }
 
-.row-fluid .span3 {
-  grid-column: span 3;
-}
+    .row-fluid .span3 {
+        grid-column: span 3;
+    }
 
-.row-fluid .span2 {
-  grid-column: span 2;
-}
+    .row-fluid .span2 {
+        grid-column: span 2;
+    }
 
-.row-fluid .span1 {
-  grid-column: span 1;
+    .row-fluid .span1 {
+        grid-column: span 1;
+    }
 }
