--- a/modules/three-column-grid.module/module.css
+++ b/modules/three-column-grid.module/module.css
@@ -1,7 +1,10 @@
 .column {
   float: left;
   width: 33.33%;
-  padding: 30px 10px;  
+  padding: 30px 10px; 
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 .row:after {
