--- a/templates/blog-index.html
+++ b/templates/blog-index.html
@@ -64,6 +64,10 @@
   %}
     {% dnd_column %}
       {% dnd_row %}
+        {% dnd_module path='../modules/featured-blog-post' %}
+        {% end_dnd_module %}
+      {% end_dnd_row %}
+      {% dnd_row %}
         {% dnd_module path='../modules/blog-listings' %}
         {% end_dnd_module %}
       {% end_dnd_row %}
