--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -45,6 +45,14 @@
             </div>
           </div>
         {% endif %}
+        <div class="header__search header--element">
+          {% module 'site_search'
+            path='@hubspot/search_input',
+            label='Search',
+            field_label='Search',
+            placeholder=''
+          %}
+        </div>
       </div>
 
       {# Header navigation row two #}
