--- a/modules/menu.module/module.css
+++ b/modules/menu.module/module.css
@@ -78,12 +78,15 @@
 
 @media (max-width: 767px) {
   .menu__item--depth-1 {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
     border-top: 2px solid #ced4db;
     padding: 0;
   }
 
   .menu__item--depth-1 > .menu__link {
-    padding: 0.35rem 1.225rem;
+    padding: 1rem 1.225rem;
   }
 
   .menu__item--depth-1 > .menu__link--active-link:after {
@@ -192,6 +195,7 @@
     position: static;
     transform: unset;
     width: 100%;
+    flex-shrink: 0;
   }
 
   .menu__submenu .menu__item {
@@ -264,9 +268,9 @@
     background-size: 20px;
     border: none;
     cursor: pointer;
-    height: 55px;
-    padding: 15px 0;
-    position: absolute;
+    /* height: 55px; */
+    /* padding: 15px 0; */
+    /* position: absolute; */
     right: 0;
     top: 0;
     width: 30%;
