--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -1,4 +1,21 @@
 /* Header DND sections */
+.header {
+    background: var(--header-background);
+    color: var(--header-color);
+}
+
+.menu__link,
+.header__logo .logo-company-name,
+.header__language-switcher-label-current,
+.header__language-switcher .lang_list_class li a {
+    color: var(--header-nav-link-color);
+    font-family: var(--header-nav-link-font);
+    font-size: var(--header-nav-link-font-size);
+    font-weight: var(--header-nav-link-font-weight);
+    line-height: var(--header-nav-link-line-height);
+    letter-spacing: var(--header-nav-link-letter-spacing);
+    text-transform: var(--header-nav-link-text-transform);
+}
 
 .header .dnd-section {
   padding: 0;
