--- a/css/main.css
+++ b/css/main.css
@@ -30,14 +30,13 @@ Base HMTL elements are styled in this section (<body<, <h1>, <a>, <p>, <button> 
 {% include './elements/_buttons.css' %}
 {% include './elements/_forms.css' %}
 {% include './elements/_tables.css' %}
-{% include './elements/_header.css' %}
-{% include './elements/_footer.css' %}
 
 /* Components
 Specific pieces of UI that are stylized. Typically used for global partial styling
 */
 
 {% include './components/_header.css' %}
+{% include './components/_footer.css' %}
 {% include './components/_default-modules.css' %}
 
 /* Utilities
