--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -32,7 +32,7 @@
 }
 
 .header__row-1 {
-  padding-top: 1rem;
+  /* padding-top: 1rem; */
 }
 
 .header__row-1,
@@ -119,9 +119,10 @@
     object-position: left;
   }
 
-  .header__icons {
-    flex-shrink: 0;
-  }
+}
+
+.header__icons {
+  flex-shrink: 0;
 }
 
 .header__logo img {
