fix(templates): update template names

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,6 +1,6 @@
 <!--
   templateType: global_partial
-  label: Footer
+  label: Website Footer
 -->
 <footer class="footer">
   {% dnd_area 'footer'
