--- a/templates/blog-index.html
+++ b/templates/blog-index.html
@@ -1,7 +1,7 @@
 <!--
   templateType: blog_listing
   isAvailableForNewContent: true
-  label: Boilerplate - blog listing
+  label: Blog Listing
   screenshotPath: ../images/template-previews/blog-index.png
 -->
 {% set template_css = '../../css/templates/blog.css' %}
