refactor(templates): rename templates

--- a/templates/system/500.html
+++ b/templates/system/500.html
@@ -1,7 +1,7 @@
 <!--
   templateType: error_page
   isAvailableForNewContent: true
-  label: Mosaic - 500 error
+  label: 500 Error
   screenshotPath: ../../images/template-previews/500.png
 -->
 {% set template_css = '../../css/templates/system.css' %}
