--- a/templates/system/search-results.html
+++ b/templates/system/search-results.html
@@ -1,7 +1,7 @@
 <!--
   templateType: search_results_page
   isAvailableForNewContent: true
-  label: Mosaic - search results
+  label: Search Results
   screenshotPath: ../../images/template-previews/search-results.png
 -->
 {% set template_css = '../../css/templates/system.css' %}
