--- a/templates/system/404.html
+++ b/templates/system/404.html
@@ -1,7 +1,7 @@
 <!--
   templateType: error_page
   isAvailableForNewContent: true
-  label: Mosaic - 404 error
+  label: 404 Error
   screenshotPath: ../../images/template-previews/404.png
 -->
 {% set template_css = '../../css/templates/system.css' %}
