--- a/css/templates/system.css
+++ b/css/templates/system.css
@@ -1,19 +1,37 @@
 /* Error pages */
 
 .error-page {
-  padding: 10rem 0;
+  background-color: #F5F5F5;
+  padding: 15rem 0;
   position: relative;
   text-align: center;
+  z-index: 9;
+}
+
+.error-page h1,
+.error-page h2,
+.error-page h3 {
+  color: #525252;
+}
+
+.error-page .error-page-content {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.error-page .error-page-content .error-message {
+  margin-top: 100px;
 }
 
 .error-page:before {
-  color: #F3F6F9;
+  color: #88ABC4;
+  opacity: .15;
   content: attr(data-error);
   font-size: 40vw;
   font-weight: bold;
   left: 50%;
   position: absolute;
-  top: 50%;
+  top: 35%;
   transform: translate(-50%, -50%);
   width: 100%;
   z-index: -1;
