feat(styles): utilize theme variables

--- a/css/generic/_variables.css
+++ b/css/generic/_variables.css
@@ -7,6 +7,8 @@
   --theme-quinary: #ededed;
   --theme-senary: #fff;
 
+  --theme-whitesmoke: #f5f5f5;
+
   /* Device Widths */
   --desktop: 1200px;
   --tablet: 960px;
