feat(system): remove class selector from system pages

--- a/templates/system/500.html
+++ b/templates/system/500.html
@@ -10,7 +10,7 @@
 {% set pageTitle = "Error 500 | Server error" %}
 
 {% block body %}
-<section class="content-wrapper">
+<section class="">
   <div class="error-page" data-error="500">
     {% module 'content'
       path='@hubspot/rich_text',
