--- a/templates/system/password-prompt.html
+++ b/templates/system/password-prompt.html
@@ -10,7 +10,7 @@
 {% set pageTitle = "This page is private | Enter password" %}
 
 {% block body %}
-<section class="content-wrapper">
+<section class="">
   <div class="systems-page">
     {% module 'content'
       path='@hubspot/rich_text',
