--- a/templates/system/search-results.html
+++ b/templates/system/search-results.html
@@ -10,7 +10,7 @@
 {% set pageTitle = "Search results" %}
 
 {% block body %}
-<section class="content-wrapper">
+<section class="">
   <div class="systems-page systems-page--search-results">
     {% module_block module 'search_results_content'
       label='Search results heading',
