--- a/templates/system/subscription-preferences.html
+++ b/templates/system/subscription-preferences.html
@@ -10,7 +10,7 @@
 {% set pageTitle = "Subscription preferences" %}
 
 {% block body %}
-<section class="content-wrapper">
+<section class="">
   <div class="systems-page">
     {% module 'subscription_preferences'
       path='@hubspot/email_subscriptions'
