--- a/templates/system/subscriptions-confirmation.html
+++ b/templates/system/subscriptions-confirmation.html
@@ -10,7 +10,7 @@
 {% set pageTitle = "Confirm subscriptions" %}
 
 {% block body %}
-<section class="content-wrapper">
+<section class="">
   <div class="systems-page">
     {% module 'subscriptions_confirmation'
       path='@hubspot/email_subscriptions_confirmation'
