--- a/templates/system/backup-unsubscribe.html
+++ b/templates/system/backup-unsubscribe.html
@@ -10,7 +10,7 @@
 {% set pageTitle = "Unsubscribe" %}
 
 {% block body %}
-<section class="content-wrapper">
+<section class="">
   <div class="systems-page">
     {% module 'backup_unsubscribe'
       extra_classes='backup-unsubscribe',
