--- a/css/templates/system.css
+++ b/css/templates/system.css
@@ -15,12 +15,13 @@
 }
 
 .error-page .error-page-content {
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
 .error-page .error-page-content .error-message {
-  margin-top: 100px;
+  margin: 100px auto 0;
+  max-width: 800px;
 }
 
 .error-page::before {
@@ -46,9 +47,22 @@
 /* System pages */
 
 .systems-page {
-  margin: 0 auto;
-  max-width: 700px;
+  background-color: var(--theme-whitesmoke);
   padding: 3rem 1.4rem;
+}
+
+.systems-page-content {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 12rem 0;
+}
+
+.systems-page-content .subscription_confirmation {
+  text-align: center;
+}
+
+.systems-page-content.subscription-preferences {
+  max-width: 1000px;
 }
 
 .systems-page--search-results {
@@ -61,40 +75,79 @@
   padding: 0;
 }
 
+.systems-page .confirmation-subheader_text {
+  max-width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .systems-page .success {
-  background-color: #CDE3CC;
-  border: 1.5px solid #4F7D24;
-  border-radius: 6px;
-  color: #4F7D24;
-  display: inline-block;
-  margin: 1.4rem 0;
-  padding: 0.1rem 0.7rem;
+  background-color: #ffffff;
+  border: 1px solid var(--theme-tertiery);
+  color: var(--theme-tertiery);
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+  margin: 100px 0 0;
+  padding: 40px;
   width: 100%;
+}
+
+.systems-page .password-prompt-form,
+.systems-page .unsubscribe_form #email-prefs-form {
+  width: 62%;
+  margin: 100px auto 0;
 }
 
 .systems-page form input {
   max-width: 100%;
+  display: inline-block;
+}
+
+.systems-page .password-prompt input[type=password] {
+  width: 75%;
+  margin-right: 30px;
 }
 
 .systems-page form input[type='submit'] {
   margin: 0.7rem 0;
-  display: block;
+  display: inline-block;
+  padding: 10px 20px;
 }
 
 /* Search pages */
 
+.systems-page--search-results .search-keyword {
+  color: var(--theme-tertiery);
+}
+
 .hs-search-results__title {
   font-size: 1.25rem;
-  margin-bottom: 0.35rem;
+  margin-bottom: 1rem;
   text-decoration: underline;
+  color: var(--theme-secondary);
+}
+.hs-search-results__title::after {
+  display: inline-block;
+  content: '→';
+  margin-left: 5px;
 }
 
 .hs-search-results__title:hover {
   text-decoration: none;
 }
 
+.systems-page--search-results .hs-search-results__listing {
+  max-width: 800px;
+  margin: 80px auto 0;
+}
+
+.systems-page--search-results .hs-search-results__listing li {
+  margin: 50px 0;
+}
+
 .hs-search-results__description {
-  padding-top: 0.7rem;
+  padding-top: 1rem;
 }
 
 /* Password prompt */
@@ -102,6 +155,9 @@
 .password-prompt input[type=password] {
   height: auto !important;
   margin-bottom: 1.4rem;
+  background: none;
+  border: none;
+  border-bottom: 1px solid var(--theme-emperor-gray);
 }
 
 .systems-page #hs-login-widget-remember,
@@ -119,15 +175,44 @@
 
 .backup-unsubscribe #email-prefs-form div {
   padding-bottom: 0 !important;
+  display: inline;
 }
 
 .backup-unsubscribe input[type=email] {
   font-size: 0.875rem !important;
   margin-bottom: 1.4rem;
   padding: 0.7rem !important;
+  background: none;
+  border: none;
+  border-bottom: 1px solid var(--theme-emperor-gray);
+  width: 70% !important;
+  margin-right: 30px;
+}
+
+.backup-unsubscribe h1,
+.backup-unsubscribe h2,
+.backup-unsubscribe h3,
+.backup-unsubscribe h4,
+.backup-unsubscribe h5,
+.backup-unsubscribe h6 {
+  text-align: center;
+}
+
+.backup-unsubscribe h3 {
+  margin: -50px 0 50px;
 }
 
 /* Subscription preferences */
+
+h2 {
+  color: var(--theme-tertiery);
+}
+
+.subscription-subheader_text,
+.subscription-single_text {
+  max-width: 80%;
+  margin: 30px 0;
+}
 
 #email-prefs-form .item.disabled {
   opacity: 0.6;
@@ -137,6 +222,7 @@
 #email-prefs-form .item.disabled input:disabled {
   cursor: not-allowed;
 }
+
 
 /* Membership pages */
 
