--- a/templates/system/500.html
+++ b/templates/system/500.html
@@ -10,20 +10,22 @@
 {% set pageTitle = "Error 500 | Server error" %}
 
 {% block body %}
-<<<<<<< Updated upstream
-<section class="">
-=======
 <section>
->>>>>>> Stashed changes
   <div class="error-page" data-error="500">
-    {% module 'content'
-      path='@hubspot/rich_text',
-      html='<h1>Something isn\'t quite right</h1>'
-    %}
-    {% module 'content'
-    path='@hubspot/rich_text',
-    html='<h3>Sorry, an internal server error occurred.</h3>'
-  %}
+    <div class="error-page-content">
+      <div class="error-headline">
+        {% module 'content'
+          path='@hubspot/rich_text',
+          html='<h1>Something isn\'t quite right</h1>'
+        %}
+        </div>
+        <div class="error-message">
+        {% module 'content'
+        path='@hubspot/rich_text',
+        html='<h3>Sorry, an internal server error occurred.</h3>'
+      %}
+      </div>
+    </div>
   </div>
 </section>
 {% endblock body %}
