--- a/templates/system/password-prompt.html
+++ b/templates/system/password-prompt.html
@@ -12,14 +12,19 @@
 {% block body %}
 <section class="">
   <div class="systems-page">
-    {% module 'content'
-      path='@hubspot/rich_text',
-      html='<h1>Password Required</h1><p>Please enter the password required to view this page.</p>'
-    %}
-    {% module 'password_prompt'
-      extra_classes='password-prompt',
-      path='@hubspot/password_prompt'
-    %}
+    <div class="systems-page-content">
+      {% module 'content'
+        path='@hubspot/rich_text',
+        html='<h1 style="text-align: center;">Password Required</h1><h3 style="text-align: center;">Please enter the password to view this page.</h3>'
+      %}
+        <div class="password-prompt-form">
+        {% module 'password_prompt'
+          extra_classes='password-prompt',
+          path='@hubspot/password_prompt',
+          submit_button_text = "Login"
+        %}
+        </div>
+      </div>
   </div>
 </section>
 {% endblock body %}
