--- a/templates/system/search-results.html
+++ b/templates/system/search-results.html
@@ -12,17 +12,19 @@
 {% block body %}
 <section class="">
   <div class="systems-page systems-page--search-results">
-    {% module_block module 'search_results_content'
-      label='Search results heading',
-      path='@hubspot/rich_text'
-    %}
-      {% module_attribute 'html' %}
-        <h1>Results for "{{ request.query_dict.term|escape }}"</h1>
-      {% end_module_attribute %}
-    {% end_module_block %}
-    {% module 'search_results'
-      path='@hubspot/search_results'
-    %}
+    <div class="systems-page-content">
+      {% module_block module 'search_results_content'
+        label='Search results heading',
+        path='@hubspot/rich_text'
+      %}
+        {% module_attribute 'html' %}
+          <h1>Search Results for "<span class="search-keyword">{{ request.query_dict.term|escape }}</span>"</h1>
+        {% end_module_attribute %}
+      {% end_module_block %}
+        {% module 'search_results'
+          path='@hubspot/search_results'
+        %}
+      </div>
   </div>
 </section>
 {% endblock body %}
