feat(styles): add new theme color

--- a/css/generic/_variables.css
+++ b/css/generic/_variables.css
@@ -8,6 +8,7 @@
   --theme-senary: #fff;
 
   --theme-whitesmoke: #f5f5f5;
+  --theme-emperor-gray: #525252;
 
   /* Device Widths */
   --desktop: 1200px;
